# pymov2gif

./: .gitattributes  LICENSE  MANIFEST.in  README.md  app.ipynb  index.html  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  deploy.yml  pipeline.yml
binder/: environment.yml
pymov2gif/: __init__.py  __main__.py  _version.py  convert.py
tests/: test_convert.py  white.mov
